# iSPARQL

./: .gitignore  AUTHORS  CREDITS  ChangeLog  LICENSE  Makefile.am  NEWS  README  auth.vsp  auth_ods.vsp  autogen.sh  cmds.vsp  configure.ac  defaults  defaults.vsp  execute.html  execute.js  gen_version.sh  index.html  isparql_sticker.xml  make_vad.sh  remote.vsp  set_dav_props.vsp  version
js/: defaults.js  error.js  execute.js  io.js  location.js  main.js  qbe.js  statusui.js  ubiq.js
oat/js/: dav.js  loader.js  map.js
oat/styles/: webdav.css
sql/: drop.sql  setup.sql
styles/: dialog.css  execute.css  menu.css  mobile.css  qbe.css  style.css
vadpacker/: ChangeLog  vadpacker.py
xslt/: dynamic-page.xsl
